<resources>
    <string name="app_name">JustCodeTimerApp</string>
    <string name="set_time">Set timer</string>
    <string name="initial_time">00:00</string>
    <string name="start_button">start</string>
    <string name="pause_button">pause</string>
    <string name="reset_button">reset</string>
    <string name="start_timer">start timer</string>
    <string name="send_time">send time</string>
</resources>