<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:icon="@drawable/arrow_back"
        app:iconGravity="textStart"
        />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/initial_time"
        android:textSize="65sp"
        android:textStyle="bold"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pause_btn"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:textStyle="bold"
        android:text="@string/pause_button"
        app:layout_constraintTop_toBottomOf="@id/timer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/start_btn"
        android:layout_marginStart="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_btn"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:text="@string/start_button"
        app:layout_constraintTop_toBottomOf="@id/timer"
        app:layout_constraintStart_toEndOf="@id/pause_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/reset_btn"
        android:layout_marginHorizontal="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_btn"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:text="@string/reset_button"
        app:layout_constraintTop_toBottomOf="@id/timer"
        app:layout_constraintStart_toEndOf="@id/start_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>